# wgpu

./: Cargo.toml
examples-wasi/: Cargo.toml  README.md
examples-wasi/src/: entrypoint_wasi.rs  framework.rs  lib.rs  utils.rs  wasi_runtime.rs
examples-wasi/src/flume/: mod.rs
examples-wasi/src/hello_compute/: mod.rs
examples-wasi/src/hello_triangle/: mod.rs
examples-wasi/src/render_to_texture/: mod.rs
examples-wasi/src/repeated_compute/: mod.rs
examples-wasi/src/shadow/: mod.rs
examples-wasi/src/winit/: mod.rs
examples-wasi/wit/: deps.toml
examples/wit/: example.wit
wgpu/: Cargo.toml
wgpu-core/: Cargo.toml
wgpu-core/src/: id.rs
wgpu-hal/: Cargo.toml
wgpu-types/: Cargo.toml
wgpu-types/src/: lib.rs
wgpu/src/: lib.rs
wgpu/src/backend/: mod.rs  wasi_webgpu.rs
